--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -2,6 +2,7 @@
   "name": "tw",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ArchitGoswami.github.io/tommyWestphallProject",
   "dependencies": {
     "@xyflow/react": "^12.3.6",
     "cra-template": "1.2.0",
